Screenshare when whiteboard is open

--- a/lang/main-af.json
+++ b/lang/main-af.json
@@ -585,6 +585,7 @@
         "closeChat": "",
         "documentClose": "Sluit gedeelde dokument",
         "documentOpen": "Open gedeelde dokument",
+        "whiteboard": "Whiteboard",
         "enterFullScreen": "Volskermaansig",
         "enterTileView": "",
         "exitFullScreen": "Verlaat volskerm",
@@ -597,6 +598,7 @@
         "lowerYourHand": "",
         "moreActions": "Aksies",
         "mute": "Demp / ontdemp",
+        "unMuteEveryone": "",
         "openChat": "",
         "pip": "Betree Prent-in-Prent-modus",
         "profile": "Redigeer u profiel",
