--- a/lang/main-be.json
+++ b/lang/main-be.json
@@ -639,6 +639,7 @@
         "closeChat": "Зачыніць чат",
         "documentClose": "Зачыніць агульны дакумент",
         "documentOpen": "Адкрыць агульны дакумент",
+        "whiteboard": "",
         "download": "Спампаваць дадатак",
         "enterFullScreen": "Поўны экран",
         "enterTileView": "Агульны план",
@@ -655,6 +656,7 @@
         "moreOptions": "Больш варыянтаў",
         "mute": "Мікрафон (Ўкл./Выкл.)",
         "muteEveryone": "Заглушыць усіх",
+        "unMuteEveryone": "",
         "noAudioSignalTitle": "Ад вашага мікрафона не ідзе гукавы сігнал!",
         "noAudioSignalDesc": "Калі вы адмыслова не адключалі мікрафон у сістэмных наладах, падумайце аб тым, каб памяняць яго.",
         "noAudioSignalDescSuggestion": "Калі вы адмыслова не адключалі мікрафон у сістэмных наладах, вы можаце паспрабаваць выкарыстоўваць наступную прыладу.",
