--- a/lang/main-bg.json
+++ b/lang/main-bg.json
@@ -629,6 +629,7 @@
         "closeChat": "Затваряне на съобщенията",
         "documentClose": "Затваряне на споделеният документ",
         "documentOpen": "Отваряне на споделен документ",
+        "whiteboard": "",
         "download": "Свалете приложението",
         "enterFullScreen": "Вижте на цял екран",
         "enterTileView": "Влизане в изглед галерия",
@@ -643,6 +644,7 @@
         "lowerYourHand": "Махни искането на думата",
         "moreActions": "Опции",
         "mute": "Спиране/пускане на микрофона",
+        "unMuteEveryone": "",
         "noAudioSignalTitle": "Няма сигнал идващ от микрофона!",
         "noAudioSignalDesc": "Ако не сте спрели звука на устройството от системните настройки, сменете с друго устройство.",
         "noAudioSignalDescSuggestion": "Ако не сте спрели звука на устройството от системните настройки, използвайте някое от предложените устройства.",
