--- a/lang/main-ca.json
+++ b/lang/main-ca.json
@@ -634,6 +634,7 @@
         "closeChat": "Tanca el xat",
         "documentClose": "Tanca el document compartit",
         "documentOpen": "Obre el document compartit",
+        "whiteboard": "",
         "download": "Baixeu les nostres aplicacions",
         "enterFullScreen": "Mostra en pantalla completa",
         "enterTileView": "Mostra en mode mosaic",
@@ -650,6 +651,7 @@
         "moreOptions": "Més opcions",
         "mute": "Silencia o activa el so",
         "muteEveryone": "Silencia tothom",
+        "unMuteEveryone": "",
         "noAudioSignalTitle": "No entra cap so pel vostre micròfon!",
         "noAudioSignalDesc": "Si no l'heu silenciat intencionadament en la configuració del sistema o per maquinari, considereu canviar l'aparell.",
         "noAudioSignalDescSuggestion": "Si no l'heu silenciat intencionadament en la configuració del sistema o per maquinari, considereu canviar a l'aparell suggerit.",
