--- a/lang/main-da.json
+++ b/lang/main-da.json
@@ -629,6 +629,7 @@
         "closeChat": "Luk chat",
         "documentClose": "Luk delt dokument",
         "documentOpen": "Åben delt dokument",
+        "whiteboard": "",
         "download": "Hent vores apps",
         "enterFullScreen": "Vis fuld skærm",
         "enterTileView": "Tileview",
@@ -645,6 +646,7 @@
         "moreOptions": "Flere indstillinger",
         "mute": "Slå lyd fra / Slå lyd til",
         "muteEveryone": "Slå lyd fra for alle",
+        "unMuteEveryone": "",
         "noAudioSignalTitle": "Der kommer ingen input fra din mikrofon!",
         "noAudioSignalDesc": "Hvis du ikke med vilje har slået den fra under systemindstillinger eller hardware, kan du overveje at skifte enhed.",
         "noAudioSignalDescSuggestion": "Hvis du ikke med vilje har slået den fra under systemindstillinger eller hardware, skal du overveje at skifte til den foreslåede enhed.",
