--- a/lang/main-el.json
+++ b/lang/main-el.json
@@ -708,6 +708,7 @@
         "closeChat": "Κλείσιμο chat",
         "documentClose": "Κλείσιμο κοινόχρηστου εγγράφου",
         "documentOpen": "Άνοιγμα κοινόχρηστο εγγράφου",
+        "whiteboard": "",
         "download": "Κατεβάστε τις εφαρμογές μας",
         "e2ee": "End-to-End Κρυπτογράφηση",
         "enterFullScreen": "Δείτε σε πλήρη οθόνη",
@@ -727,6 +728,7 @@
         "moreOptions": "Περισσότερες επιλογές",
         "mute": "Σίγαση / Κατάργηση Σίγασης",
         "muteEveryone": "Σίγαση όλων",
+        "unMuteEveryone": "",
         "noAudioSignalTitle": "Δεν υπάρχει ήχος από το μικρόφωνο σας!",
         "noAudioSignalDesc": "Αν δεν του κάνατε σίγαση ηθελημένα από τις ρυθμίσεις του συστήματος ή του υλικού, εξετάστε την αντικατάσταση της συσκευής.",
         "noAudioSignalDescSuggestion": "Αν δεν του κάνατε σίγαση ηθελημένα από τις ρυθμίσεις του συστήματος ή του υλικού, εξετάστε τη χρήση της προτεινόμενης συσκευής.",
