--- a/lang/main-eo.json
+++ b/lang/main-eo.json
@@ -646,6 +646,7 @@
         "closeChat": "Malfermi babilejon",
         "documentClose": "Malfermi/Fermi komunan dokumenton",
         "documentOpen": "Malfermi/Fermi komunan dokumenton",
+        "whiteboard": "",
         "download": "Elŝuti niajn aplikaĵojn",
         "e2ee": "Tutvoja ĉifrado",
         "enterFullScreen": "Vidi tutekrane",
@@ -663,6 +664,7 @@
         "moreOptions": "Pli da ebloj",
         "mute": "Silentigi/Malsilentigi",
         "muteEveryone": "Silentigi ĉiujn",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalTitle": "Ne estas signalo el via mikrofono!",
         "noAudioSignalDesc": "Se vi ne intence silentigis ĝin per viaj sistemaj agordoj aŭ fizike, konsideru transŝalti al alia aparato.",
         "noAudioSignalDescSuggestion": "Se vi ne intence silentigis ĝin per viaj sistemaj agordoj aŭ fizike, konsideru transŝalti al la proponata aparato.",
