--- a/lang/main-et.json
+++ b/lang/main-et.json
@@ -628,6 +628,7 @@
         "closeChat": "Sulge vestlus",
         "documentClose": "Sulge jagatud dokument",
         "documentOpen": "Ava jagatud dokument",
+        "whiteboard": "",
         "download": "Laadi rakendus alla",
         "enterFullScreen": "Vaata täisekraanil",
         "enterTileView": "Vaata paneelvaates",
@@ -644,6 +645,7 @@
         "moreOptions": "Rohkem valikuid",
         "mute": "Mikrofon sisse/välja",
         "muteEveryone": "Vaigista kõikide mikrofonid",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalTitle": "Mikrofon ei püüa sisendit kinni!",
         "noAudioSignalDesc": "Kui Sa ei lülitanud mikrofoni seadistustest tahtlikult välja, kaalu seadme vahetamist.",
         "noAudioSignalDescSuggestion": "Kui Sa ei lülitanud mikrofoni seadistustest tahtlikult välja, kaalu seadme vahetamist.",
