--- a/lang/main-eu.json
+++ b/lang/main-eu.json
@@ -673,6 +673,7 @@
         "closeChat": "Itxi txat gela",
         "documentClose": "Dokumentu partekatu itxi",
         "documentOpen": "Ireki partekatutako dokumentua",
+        "whiteboard": "",
         "download": "Deskargatu gure aplikazioa",
         "e2ee": "",
         "enterFullScreen": "Ikusi pantaila osoa",
@@ -690,6 +691,7 @@
         "moreOptions": "Aukera gehiago",
         "mute": "Isiltasuna aktibatu / desaktibatu",
         "muteEveryone": "Partehartzaile guztiak isildu",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalTitle": "Mikrofonotik ez dago sarrerarik!",
         "noAudioSignalDesc": "Sistema edo gailuaren ezarpenetatik islatu ez baduzu, kontuan hartu gailua aldatzea.",
         "noAudioSignalDescSuggestion": "Sistema edo gailuaren ezarpenetatik islatu ez baduzu, kontuan hartu hurrengo gailua erabiltzea:",
