--- a/lang/main-fi.json
+++ b/lang/main-fi.json
@@ -585,6 +585,7 @@
         "closeChat": "Sulje chatti",
         "documentClose": "Sulje jaettu asiakirja",
         "documentOpen": "Avaa jaettu asiakirja",
+        "whiteboard": "",
         "enterFullScreen": "Näytä koko näytössä",
         "enterTileView": "Siirry ruudukkonäkymään",
         "exitFullScreen": "Poisti koko näytöstä",
@@ -597,6 +598,7 @@
         "lowerYourHand": "Laske käsi",
         "moreActions": "Toimintoja",
         "mute": "Mykistys päällä/pois",
+        "unMuteEveryone": "Unmute everyone",
         "openChat": "Avaa chatti",
         "pip": "Siirry Kuva kuvassa (PiP) -tilaan",
         "profile": "Muokkaa profiilia",
