--- a/lang/main-frCA.json
+++ b/lang/main-frCA.json
@@ -611,6 +611,7 @@
         "closeChat": "Fermer le clavardage",
         "documentClose": "Fermer le document partagé",
         "documentOpen": "Ouvrir le document partagé",
+        "whiteboard": "",
         "download": "Télécharger nos applications",
         "enterFullScreen": "Afficher le mode plein écran",
         "enterTileView": "Passer à l'affichage mosaïque",
@@ -625,6 +626,7 @@
         "lowerYourHand": "Abaisser votre main",
         "moreActions": "D'actions",
         "mute": "Activer / Réactiver le son",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalTitle": "Il n'y a pas d'entrée provenant de votre micro !",
         "noAudioSignalDesc": "Si vous n'avez pas délibérément coupé le son des paramètres du système ou du matériel, envisagez de changer le périphérique.",
         "noAudioSignalDescSuggestion": "Si vous n'avez pas délibérément coupé le son des paramètres du système ou du matériel, pensez à utiliser le périphérique suivant :",
