--- a/lang/main-gl.json
+++ b/lang/main-gl.json
@@ -616,6 +616,7 @@
         "closeChat": "Pechar o chat",
         "documentClose": "Pechar o documento compartido",
         "documentOpen": "Abrir o documento compartido",
+        "whiteboard": "",
         "download": "Descargar as apps",
         "enterFullScreen": "Ver a pantalla completa",
         "enterTileView": "Entrar á vista de mosaico",
@@ -630,6 +631,7 @@
         "lowerYourHand": "Baixar a man",
         "moreActions": "Accións",
         "mute": "Silenciar / Activar",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalTitle": "Non hai sinal de entrada desde o seu micro!",
         "noAudioSignalDesc": "Se vostede non o silenciou adrede na configuración do seu sistema ou hardware, considere cambiar de dispositivo.",
         "noAudioSignalDescSuggestion": "Se vostede non o silenciou adrede na configuración do sistema ou no hardware, considere utilizar o seguinte dispositivo:",
