--- a/lang/main-he.json
+++ b/lang/main-he.json
@@ -638,6 +638,7 @@
         "closeChat": "סגור צ'אט",
         "documentClose": "סגור מסמך משותף",
         "documentOpen": "פתח מסמך משותף",
+        "whiteboard": "",
 		"download": "הורד את היישום שלנו",
         "enterFullScreen": "הצג מסך מלא",
         "enterTileView": "היכנס לתצוגת אריחים",
@@ -653,7 +654,8 @@
         "moreActions": "פעולות נוספות",
 		"moreOptions": "אפשרויות נוספות",
         "mute": "השתק / בטל השתקה",
-		"muteEveryone": "השתק את כולם",
+        "muteEveryone": "השתק את כולם",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalTitle": "אין שום קלט שמגיע מהמיקרופון שלך!",
         "noAudioSignalDesc": "אם לא השתקת אותו בכוונה מהגדרות המערכת או החומרה, שקול להחליף את ההתקן.",
         "noAudioSignalDescSuggestion": "אם לא השתקת אותה בכוונה מהגדרות המערכת או החומרה, שקול לעבור להתקן המוצע.",
