--- a/lang/main-hr.json
+++ b/lang/main-hr.json
@@ -590,6 +590,7 @@
         "closeChat": "Zatvori čavrljanje",
         "documentClose": "Zatvori dijeljeni dokument",
         "documentOpen": "Otvori dijeljenji dokument",
+        "whiteboard": "",
         "enterFullScreen": "Prikaz preko cijelog ekrana",
         "enterTileView": "Uključi prikaz pločica",
         "exitFullScreen": "Izađi iz prikaza cijelog ekrana",
@@ -602,6 +603,7 @@
         "lowerYourHand": "Spusti ruku",
         "moreActions": "Akcija",
         "mute": "Isključi / Uključi zvuk",
+        "unMuteEveryone": "Unmute everyone",
         "openChat": "Otvori čavrljanje",
         "pip": "Otvori način slika-u-slici",
         "profile": "",
