--- a/lang/main-hu.json
+++ b/lang/main-hu.json
@@ -630,6 +630,7 @@
         "closeChat": "Csevegés bezárása",
         "documentClose": "Megosztott dokumentum bezárása",
         "documentOpen": "Megosztott dokumentum megnyitása",
+        "whiteboard": "",
         "download": "Alkalmazás letöltése",
         "enterFullScreen": "Teljes képernyős megtekintés",
         "enterTileView": "Mozaikos nézet indítása",
@@ -644,6 +645,7 @@
         "lowerYourHand": "Kéz leengedése",
         "moreActions": "További műveltek",
         "mute": "Némítás / Visszahangosítás",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalTitle": "Nincs bemenet a mikrofonjáról!",
         "noAudioSignalDesc": "Ha nem szándékosan némította el a rendszerbeállításokban vagy az eszközön, akkor fontolja meg az eszköz cseréjét.",
         "noAudioSignalDescSuggestion": "Ha nem szándékosan némította el a rendszerbeállításokban vagy az eszközön, akkor fontolja meg a következő eszköz használatát.",
