--- a/lang/main-hy.json
+++ b/lang/main-hy.json
@@ -580,6 +580,7 @@
         "closeChat": "",
         "documentClose": "Բացել/փակել համատեղ հասանելի փաստաթուղթը",
         "documentOpen": "Բացել համատեղ հասանելի փաստաթուղթը",
+        "whiteboard": "",
         "enterFullScreen": "Նայել ամբողջ էկրանով",
         "enterTileView": "",
         "exitFullScreen": "Անջատել \"Ամբողջ էկրան\" ռեժիմը",
@@ -592,6 +593,7 @@
         "lowerYourHand": "",
         "moreActions": "Ավելի շատ հնարավորություններ",
         "mute": "Միացնել/Անջատել ձայնը ",
+        "unMuteEveryone": "Unmute everyone",
         "openChat": "",
         "pip": "",
         "profile": "Փոփոխել տվյալները",
