--- a/lang/main-is.json
+++ b/lang/main-is.json
@@ -634,6 +634,7 @@
         "closeChat": "Loka spjalli",
         "documentClose": "Loka deildu skjali",
         "documentOpen": "Opna deilt skjal",
+        "whiteboard": "",
         "download": "Sækja forritin okkar",
         "enterFullScreen": "Skoða á öllum skjánum",
         "enterTileView": "Opna reitasýn",
@@ -650,6 +651,7 @@
         "moreOptions": "Fleiri valkostir",
         "mute": "Þagga/Kveikja á hljóði",
         "muteEveryone": "Þagga niður í öllum",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalTitle": "Það er ekkert inntak að koma frá hljóðnemanum þínum!",
         "noAudioSignalDesc": "Ef þú þaggaðir ekki viljandi niður í þessu í kerfisstillingunum eða með vélbúnaðarrofa, þá ættirðu að íhuga að skipta um hljóðtæki.",
         "noAudioSignalDescSuggestion": "Ef þú þaggaðir ekki viljandi niður í þessu í kerfisstillingunum eða með vélbúnaðarrofa, þá ættirðu að íhuga að skipta yfir á hljóðtækið sem stungið er upp á.",
