--- a/lang/main-kab.json
+++ b/lang/main-kab.json
@@ -661,6 +661,7 @@
         "closeChat": "Mdel asqerdec",
         "documentClose": "Mdel isemli yettwabḍan",
         "documentOpen": "Ldi isemli yettwabḍan",
+        "whiteboard": "",
         "enterFullScreen": "Wali agdil aččuran",
         "enterTileView": "Kcem ɣer uskan aɛban",
         "exitFullScreen": "Ffeɣ seg ugdil aččuran",
@@ -673,6 +674,7 @@
         "lowerYourHand": "Ṣubb afus-ik·im",
         "moreActions": "Ugar n tigawin",
         "mute": "Sgugem / Kkes tagugmi",
+        "unMuteEveryone": "Unmute everyone",
         "openChat": "Ldi asqerdec",
         "pip": "Kcem ɣer uskar tugna deg tugna",
         "profile": "Ẓreg amaɣnu-ik",
