--- a/lang/main-ko.json
+++ b/lang/main-ko.json
@@ -626,6 +626,7 @@
         "closeChat": "대화 닫기",
         "documentClose": "문서 공유 닫기",
         "documentOpen": "문서 공유 열기",
+        "whiteboard": "",
         "download": "앱 다운로드",
         "enterFullScreen": "전체화면 보기",
         "enterTileView": "타일보기 시작",
@@ -641,6 +642,7 @@
         "moreOptions": "옵션 더보기",
         "mute": "음소거 설정/해제",
         "muteEveryone": "모두 음소거",
+        "unMuteEveryone": "Unmute everyone",
         "openChat": "대화 열기",
         "pip": "",
         "privateMessage": "비공개 메시지 보내기",
