--- a/lang/main-lt.json
+++ b/lang/main-lt.json
@@ -629,6 +629,7 @@
         "closeChat": "Užverti susirašinėjimą",
         "documentClose": "Užverti pasidalintus dokumentus",
         "documentOpen": "Atverti pasidalintus dokumentus",
+        "whiteboard": "",
         "download": "Atsisiųskite mūsų programėles",
         "enterFullScreen": "Peržiūrėti pilno vaizdo rėžimą",
         "enterTileView": "Įeiti į rodinį",
@@ -645,6 +646,7 @@
         "moreOptions": "Daugiau parinkčių",
         "mute": "Begarsis / Su garsu",
         "muteEveryone": "Nutildyti visus",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalTitle": "Nėra jokios mikrafono įvesties!",
         "noAudioSignalDesc": "Jei specialiai nenutildėte tai sistemoje, apsvarstykite perjungti įrangą.",
         "noAudioSignalDescSuggestion": "Jei specialiai nenutildėte tai sistemoje, apsvarstykite perjungti į pasiūlytą įrangą.",
