--- a/lang/main-lv.json
+++ b/lang/main-lv.json
@@ -624,6 +624,7 @@
         "closeChat": "Aizvērt tērzētavu",
         "documentClose": "Aizvērt kopīgoto dokumentu",
         "documentOpen": "Atvērt kopīgotu dokumentu",
+        "whiteboard": "",
         "download": "Lejupielādēt lietotnes",
         "enterFullScreen": "Pilnekrāna režīms",
         "enterTileView": "Videoflīžu režīms",
@@ -640,6 +641,7 @@
         "moreOptions": "Vairāk izvēļu",
         "mute": "Noklusināt/apskaņot (mikrofons (iesl./izsl.))",
         "muteEveryone": "Noklusināt visus dalībniekus",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalTitle": "No jūsu mikrofona nenāk skaņas signāls!",
         "noAudioSignalDesc": "Ja esat speciāli atspējojis mikrofonu sistēmas vai aparatūras iestatījumos, apsveriet tā iespējošanu.",
         "noAudioSignalDescSuggestion": "Ja esat speciāli atspējojis mikrofonu sistēmas vai aparatūras iestatījumos, apsveriet šīs ierīces izmantošanu:",
