--- a/lang/main-mn.json
+++ b/lang/main-mn.json
@@ -628,6 +628,7 @@
         "closeChat": "Зурвас хаах",
         "documentClose": "Хуваалцсан бичиг баримт хаах",
         "documentOpen": "Хуваалцсан бичиг баримт нээх",
+        "whiteboard": "",
         "download": "Манай програмуудыг татах",
         "enterFullScreen": "Бүтэн дэлгэцээр харах",
         "enterTileView": "Зэрэгцүүлж харах",
@@ -644,6 +645,7 @@
         "moreOptions": "Бусад тохиргоо",
         "mute": "Дуу хаах/нээх",
         "muteEveryone": "Бүх дууг хаах",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalTitle": "Таны микрофоноос оруулах оролт байхгүй байна!",
         "noAudioSignalDesc": "Хэрэв та системийн тохиргоо эсвэл техник хангамжаас үүнийг идэвхгүй болгоогүй бол төхөөрөмжийг солиж үзнэ үү.",
         "noAudioSignalDescSuggestion": "Хэрэв та системийн тохиргоо эсвэл техник хангамжаас үүнийг идэвхгүй болгоогүй бол санал болгосон төхөөрөмжид шилжүүлнэ үү.",
