--- a/lang/main-mr.json
+++ b/lang/main-mr.json
@@ -634,6 +634,7 @@
 "closeChat": "गप्पा बंद करा",
 "documentClose": "सामायिक दस्तऐवज बंद करा",
 "documentOpen": "सामायिक दस्तऐवज उघडा",
+"whiteboard": "",
 "download": "आमचे अ‍ॅप्स डाउनलोड करा",
 "e2ee": "एंड-टू-एंड एनक्रिप्शन",
 "enterFullScreen": "पूर्ण स्क्रीन पहा",
@@ -651,6 +652,7 @@
 "moreOptions": "अधिक पर्याय",
 "mute": "नि: शब्द / सशब्द करा",
 "muteEveryone": "सर्वांना नि: शब्द करा",
+"unMuteEveryone": "Unmute everyone",
 "noAudioSignalTitle": "आपल्या माइकवरून कोणतेही इनपुट येत नाही!",
 "noAudioSignalDesc": "आपण सिस्टम सेटिंग्ज किंवा हार्डवेअरवरून हेतुपुरस्सर नि: शब्द न केल्यास, डिव्हाइस बदलण्याचा विचार करा.",
 "noAudioSignalDescSuggestion": "आपण सिस्टम सेटिंग्ज किंवा हार्डवेअरवरून हेतुपुरस्सर नि: शब्द न केल्यास, सूचित डिव्हाइसवर स्विच करण्याचा विचार करा.",
