--- a/lang/main-nl.json
+++ b/lang/main-nl.json
@@ -712,6 +712,7 @@
         "closeChat": "Chat sluiten",
         "documentClose": "Gedeeld document sluiten",
         "documentOpen": "Gedeeld document openen",
+        "whiteboard": "",
         "download": "Download onze apps",
         "e2ee": "Eind-tot-eind-versleuteling",
         "enterFullScreen": "Volledig scherm weergeven",
@@ -731,6 +732,7 @@
         "moreOptions": "Meer opties",
         "mute": "Dempen / Dempen opheffen",
         "muteEveryone": "Iedereen dempen",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalTitle": "Er komt geen invoer van uw microfoon!",
         "noAudioSignalDesc": "Als u niet met opzet hebt gedempt vanuit systeeminstellingen of hardware, overweeg dan van apparaat te wisselen.",
         "noAudioSignalDescSuggestion": "Als u niet met opzet hebt gedempt vanuit systeeminstellingen of hardware, overweeg dan over te schakelen naar het gesuggereerde apparaat.",
