--- a/lang/main-pl.json
+++ b/lang/main-pl.json
@@ -722,6 +722,7 @@
         "closeChat": "Zamknij czat",
         "documentClose": "Zamknij udostępniony dokument",
         "documentOpen": "Otwarty udostępniony dokument",
+        "whiteboard": "",
         "download": "Pobierz nasze aplikacje",
         "e2ee": "Szyfrowanie End-to-End",
         "embedMeeting": "Osadź spotkanie",
@@ -742,6 +743,7 @@
         "moreOptions": "Więcej opcji",
         "mute": "Włącz / Wyłącz mikrofon",
         "muteEveryone": "Wycisz wszystkich",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalTitle": "Brak sygnału audio!",
         "noAudioSignalDesc": "Jeżeli celowo nie wyciszyłeś mikrofonu w ustawieniach systemowych spróbuj innego urządzenia.",
         "noAudioSignalDescSuggestion": "Jeżeli celowo nie wyciszyłeś mikrofonu w ustawieniach systemowych spróbuj sugerowanego urządzenia.",
