--- a/lang/main-pt.json
+++ b/lang/main-pt.json
@@ -611,6 +611,7 @@
         "closeChat": "Fechar chat",
         "documentClose": "Fechar documento compartilhado",
         "documentOpen": "Abrir documento compartilhado",
+        "whiteboard": "",
         "download": "Baixe nossos aplicativos",
         "enterFullScreen": "Ver em tela cheia",
         "enterTileView": "Entrar em exibição de bloco",
@@ -625,6 +626,7 @@
         "lowerYourHand": "Baixar a mão",
         "moreActions": "Ações",
         "mute": "Mudo / Não mudo",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalTitle": "",
         "noAudioSignalDesc": "",
         "noAudioSignalDescSuggestion": "",
