--- a/lang/main-ptBR.json
+++ b/lang/main-ptBR.json
@@ -744,6 +744,7 @@
         "closeChat": "Fechar chat",
         "documentClose": "Fechar documento compartilhado",
         "documentOpen": "Abrir documento compartilhado",
+        "whiteboard": "",
         "download": "Baixe nossos aplicativos",
         "e2ee": "Encriptação ponto a ponto",
         "embedMeeting": "Reunião em formato compacto",
@@ -764,6 +765,7 @@
         "moreOptions": "Mais opções",
         "mute": "Mudo / Não mudo",
         "muteEveryone": "Silenciar todos",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalTitle": "Não há entrada de áudio vindo do seu microfone!",
         "noAudioSignalDesc": "Se você não o desativou propositalmente das configurações do sistema ou do hardware, considere trocar o dispositivo.",
         "noAudioSignalDescSuggestion": "Se você não o desativou propositalmente das configurações do sistema ou do hardware, considere trocar para o dispositivo sugerido.",
