--- a/lang/main-ro.json
+++ b/lang/main-ro.json
@@ -628,6 +628,7 @@
         "closeChat": "Închideți conversația",
         "documentClose": "Închideți document partajat",
         "documentOpen": "Deschideți document partajat",
+        "whiteboard": "",
         "enterFullScreen": "Vizualizare ecran întreg",
         "enterTileView": "Accesare miniatură video",
         "exitFullScreen": "Ieșiți ecran întreg",
@@ -639,6 +640,7 @@
         "logout": "Deconectare",
         "lowerYourHand": "Coborâți mâna",
         "moreActions": "Acțiuni suplimentare",
+        "unMuteEveryone": "Unmute everyone",
         "mute": "Porniți / Opriți sunetul",
         "openChat": "Open chat",
         "pip": "Accesare mod Picture-in-Picture",
