--- a/lang/main-sc.json
+++ b/lang/main-sc.json
@@ -633,6 +633,7 @@
         "closeChat": "Serra sa tzarrada",
         "documentClose": "Serra su documentu cumpartzidu",
         "documentOpen": "Aberi su documentu cumpartzidu",
+        "whiteboard": "",
         "download": "Iscàrriga is aplicatziones nostras",
         "enterFullScreen": "Ammustra in mannària prena",
         "enterTileView": "Intra in visualizatzione in mosàicu",
@@ -649,6 +650,7 @@
         "moreOptions": "Àteras optziones",
         "mute": "Ativa o disativa s'àudio",
         "muteEveryone": "Pone totus a sa muda",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalTitle": "Perunu sinnale dae su micròfonu tuo.",
         "noAudioSignalDesc": "Si no dd'as postu a sa muda dae sa cunfiguratzione de sistema o dae su dispositivu, forsis depes cambiare dispositivu.",
         "noAudioSignalDescSuggestion": "Si no dd'as postu a sa muda dae sa cunfiguratzione de sistema o dae su dispositivu, forsis depes cambiare a su dispositivu cussigiadu.",
