--- a/lang/main-sk.json
+++ b/lang/main-sk.json
@@ -715,6 +715,7 @@
         "closeChat": "Chat zatvoriť",
         "documentClose": "Zatvoriť zdieľaný dokument",
         "documentOpen": "Otvoriť zdieľaný dokument",
+        "whiteboard": "",
         "download": "Stiahnuť našu aplikáciu",
         "e2ee": "Koncové šifrovanie",
         "enterFullScreen": "Zobraziť na celú obrazovku",
@@ -734,6 +735,7 @@
         "moreOptions": "Viac možností",
         "mute": "Vypnúť / Zapnúť mikrofón",
         "muteEveryone": "Všetkých stlmiť",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalTitle": "Neprichádza žiaden vstup z vašeho mikrofónu!",
         "noAudioSignalDesc": "Pokiaľ ste zámerne nestlmili váš mikrofón v systémových nastaveniach alebo hardvéri, pouvažujte nad prepnutím zariadenia.",
         "noAudioSignalDescSuggestion": "Pokiaľ ste zámerne nestlmili váš mikrofón v systémových nastaveniach alebo hardvéri, pouvažujte nad prepnutím na odporúčané zariadenie.",
