--- a/lang/main-sl.json
+++ b/lang/main-sl.json
@@ -693,6 +693,7 @@
         "closeChat": "Zapri klepet",
         "documentClose": "Zapri deljeni dokument",
         "documentOpen": "Odpri deljeni dokument",
+        "whiteboard": "",
         "download": "Prenesi naše aplikacije",
         "e2ee": "End-to-End Encryption",
         "enterFullScreen": "Poglej na celem zaslonu",
@@ -710,6 +711,7 @@
         "moreOptions": "More options",
         "mute": "Vklopi / izklopi mikrofon",
         "muteEveryone": "Mute everyone",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalDesc": "If you did not purposely mute it from system settings or hardware, consider switching the device.",
         "noAudioSignalDescSuggestion": "If you did not purposely mute it from system settings or hardware, consider switching to the suggested device.",
         "noAudioSignalDialInDesc": "You can also dial-in using:",
