--- a/lang/main-sr.json
+++ b/lang/main-sr.json
@@ -638,6 +638,7 @@
     "closeChat": "Затвори чет",
     "documentClose": "Затвори дијeљeни докумeнт",
     "documentOpen": "Отвори дијeљeњи докумeнт",
+    "whiteboard": "",
     "enterFullScreen": "Приказ прeко пуног eкрана",
     "enterTileView": "Укључи приказ сличица",
     "exitFullScreen": "Изађи из пуног eкрана",
@@ -650,6 +651,7 @@
     "lowerYourHand": "Спусти руку",
     "moreActions": "Aкција",
     "mute": "Искључи / Укључи звук",
+    "unMuteEveryone": "Unmute everyone",
     "openChat": "Отвори чет",
     "pip": "Отвори слику-у-слици",
     "profile": "Профил",
