--- a/lang/main-sv.json
+++ b/lang/main-sv.json
@@ -626,6 +626,7 @@
         "closeChat": "Stäng chatt",
         "documentClose": "Stäng delat dokument",
         "documentOpen": "Öppna delat dokument",
+        "whiteboard": "",
         "enterFullScreen": "Visa fullskärm",
         "enterTileView": "Öppna panelvy",
         "exitFullScreen": "Stäng fullskärm",
@@ -637,6 +638,7 @@
         "logout": "Logga ut",
         "lowerYourHand": "Ta ner handen",
         "moreActions": "Fler handlingar",
+        "unMuteEveryone": "Unmute everyone",
         "mute": "Slå av/på ljud",
         "openChat": "Öppna chatt",
         "pip": "Öppna bild-i-bild-läge",
