--- a/lang/main-tr.json
+++ b/lang/main-tr.json
@@ -703,6 +703,7 @@
         "closeChat": "Mesajlaşmayı kapat",
         "documentClose": "Paylaşılan dokümanı kapat",
         "documentOpen": "Paylaşılan dokümanı aç",
+        "whiteboard": "",
 	    "download": "Uygulamalarımızı indirin",
         "e2ee": "Uçtan uca şifreleme",
         "enterFullScreen": "Tam ekran görüntüle",
@@ -720,6 +721,7 @@
         "lowerYourHand": "Elinizi indirin",
         "moreActions": "Daha fazla işlem",
         "moreOptions": "Daha fazla seçenek",
+        "unMuteEveryone": "Unmute everyone",
         "mute": "Sessiz / Sesli",
         "muteEveryone": "Mute everyone",
         "noAudioSignalTitle": "Mikrofonunuzdan hiçbir giriş gelmiyor!",
