--- a/lang/main-uk.json
+++ b/lang/main-uk.json
@@ -645,6 +645,7 @@
         "closeChat": "Закрити чат",
         "documentClose": "Закрити спільний документ",
         "documentOpen": "Відкрити спільний документ",
+        "whiteboard": "",
         "download": "Звантажити застосунок",
         "enterFullScreen": "На весь екран",
         "enterTileView": "Режим плиток",
@@ -661,6 +662,7 @@
         "moreOptions": "Більше параметрів",
         "mute": "Приглушити мікрофон",
         "muteEveryone": "Вимкнути мікрофони всім",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalTitle": "Ваш мікрофон не подає звукових сигналів!",
         "noAudioSignalDesc": "Якщо ви не вимикали мікрофон у системних налаштуваннях, можливо варто його замінити.",
         "noAudioSignalDescSuggestion": "Якщо ви не вимикали мікрофон у системних налаштуваннях, будь ласка, спробуйте скористатися рекомендованим пристроєм.",
