--- a/lang/main-vi.json
+++ b/lang/main-vi.json
@@ -585,6 +585,7 @@
         "closeChat": "Đóng Chat",
         "documentClose": "Đóng tài liệu được chia sẻ",
         "documentOpen": "Mở tài liệu được chia sẻ",
+        "whiteboard": "",
         "enterFullScreen": "Xem toàn màn hình",
         "enterTileView": "Xem chế độ lưới",
         "exitFullScreen": "Thoát toàn màn hình",
@@ -597,6 +598,7 @@
         "lowerYourHand": "Hạ tay",
         "moreActions": "Thêm hành động",
         "mute": "Tắt tiếng / Bật tiếng",
+        "unMuteEveryone": "Unmute everyone",
         "openChat": "Mở Chat",
         "pip": "Vào chế độ Ảnh-trong-Ảnh",
         "profile": "Chỉnh sửa hồ sơ cá nhân",
