--- a/lang/main-zhTW.json
+++ b/lang/main-zhTW.json
@@ -630,6 +630,7 @@
         "closeChat": "關閉交談",
         "documentClose": "關閉分享的文件檔案",
         "documentOpen": "開啟分享的文件檔案",
+        "whiteboard": "",
         "download": "下載我們的 APPs",
         "enterFullScreen": "觀看全螢幕",
         "enterTileView": "進入平鋪檢視",
@@ -644,6 +645,7 @@
         "lowerYourHand": "放下舉手",
         "moreActions": "更多動作",
         "mute": "靜音 / 解除靜音",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalTitle": "您的麥克風沒有輸入訊號！",
         "noAudioSignalDesc": "如果您沒有特別從系統設定或硬體靜音，請考慮更換裝置。",
         "noAudioSignalDescSuggestion": "如果您沒有特別從系統設定或硬體靜音，請考慮切換至建議裝置。",
