--- a/lang/main-fr.json
+++ b/lang/main-fr.json
@@ -755,6 +755,7 @@
         "closeChat": "Fermer le chat",
         "documentClose": "Fermer le document partagé",
         "documentOpen": "Ouvrir le document partagé",
+        "whiteboard": "",
         "download": "Télécharger nos applications",
         "e2ee": "Cryptage de Bout-en-Bout",
         "embedMeeting": "Intégrer la réunion",
@@ -775,6 +776,7 @@
         "moreOptions": "Plus d'options",
         "mute": "Muet / Actif",
         "muteEveryone": "Couper le micro à tout le monde",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalTitle": "Il n'y a pas de signal provenant de votre micro !",
         "noAudioSignalDesc": "Si vous n'avez pas délibérément coupé le son des paramètres du système ou du matériel, envisagez de changer de périphérique utilisé.",
         "noAudioSignalDescSuggestion": "Si vous n'avez pas délibérément coupé le son des paramètres du système ou du matériel, pensez à utiliser le périphérique suivant :",
