--- a/lang/main-id.json
+++ b/lang/main-id.json
@@ -638,6 +638,7 @@
         "closeChat": "Close chat",
         "documentClose": "Close Whiteboard",
         "documentOpen": "Open Whiteboard",
+        "whiteboard": "Whiteboard",
         "download": "Download our apps",
         "enterFullScreen": "View full screen",
         "enterTileView": "Enter tile view",
@@ -654,6 +655,7 @@
         "moreOptions": "More options",
         "mute": "Mute / Unmute",
         "muteEveryone": "Mute everyone",
+        "unMuteEveryone": "Unmute everyone",
         "noAudioSignalTitle": "There is no input coming from your mic!",
         "noAudioSignalDesc": "If you did not purposely mute it from system settings or hardware, consider switching the device.",
         "noAudioSignalDescSuggestion": "If you did not purposely mute it from system settings or hardware, consider switching to the suggested device.",
